--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <link href="public/css/bootstrap.min.css" rel="stylesheet" />
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">-->
+    <link rel="stylesheet" href="https://cdn.jsdeivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+<!--    <link rel="stylesheet" href="https://cdn.jsdeivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Temfo,</title>
 </head>
 <body>
 <div id="root"></div>
-
 </body>
 </html>
